WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159585
Mail messages don't start loading until scrolling completes
https://bugs.webkit.org/show_bug.cgi?id=159585
Summary
Mail messages don't start loading until scrolling completes
Tim Horton
Reported
2016-07-08 16:26:43 PDT
Mail messages don't start loading until scrolling completes
Attachments
Patch
(2.16 KB, patch)
2016-07-08 16:27 PDT
,
Tim Horton
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-07-08 16:27:01 PDT
Created
attachment 283213
[details]
Patch
Tim Horton
Comment 2
2016-07-08 16:27:23 PDT
Looking into writing an API test now.
Andy Estes
Comment 3
2016-07-08 16:28:01 PDT
Comment on
attachment 283213
[details]
Patch Nice.
Alexey Proskuryakov
Comment 4
2016-07-08 17:09:15 PDT
Will this also enable loading under a modal dialog, and thus running scripts under a modal dialog and other scary things?
Brady Eidson
Comment 5
2016-07-08 17:11:17 PDT
(In reply to
comment #4
)
> Will this also enable loading under a modal dialog, and thus running scripts > under a modal dialog and other scary things?
WebProcesses will still be stuck on the modal dialog sync message - This is only about letting the UI Process get things back to the Networking process.
Tim Horton
Comment 6
2016-07-08 17:16:13 PDT
https://trac.webkit.org/changeset/203010
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug