Mail messages don't start loading until scrolling completes https://bugs.webkit.org/show_bug.cgi?id=159585 <rdar://problem/27088405>

Reviewed by Andy Estes.

* UIProcess/Network/CustomProtocols/mac/CustomProtocolManagerProxyMac.mm:
(-[WKCustomProtocolLoader initWithCustomProtocolManagerProxy:customProtocolID:request:connection:]):
When scrolling, NSDefaultRunLoopMode isn't run, but NSRunLoopCommonModes are.
CFNetwork uses NSDefaultRunLoopMode if we tell NSURLConnection to "start immediately",
but we can instead schedule our NSURLConnection into NSRunLoopCommonModes
and start it ourselves, ensuring that it will be able to do work while scrolling is happening.


Canonical link: https://commits.webkit.org/177728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203010 268f45cc-cd09-0410-ab3c-d52691b4dbfc