Source/WebKit2/UIProcess/Network/CustomProtocols/mac/CustomProtocolManagerProxyMac.mm
@@ -68,7 +68,9 @@ using namespace WebKit;
     _storagePolicy = NSURLCacheStorageNotAllowed;
 #pragma clang diagnostic push
 #pragma clang diagnostic ignored "-Wdeprecated-declarations"
-    _urlConnection = [[NSURLConnection alloc] initWithRequest:request delegate:self startImmediately:YES];
+    _urlConnection = [[NSURLConnection alloc] initWithRequest:request delegate:self startImmediately:NO];
+    [_urlConnection scheduleInRunLoop:[NSRunLoop mainRunLoop] forMode:NSRunLoopCommonModes];
+    [_urlConnection start];
 #pragma clang diagnostic pop
 
     return self;
